examples/pos/issue652.effekt
def foo(opt: Option[Bool]) = opt match {
  case Some(false) => Some(false)
  case opt => Some(true)
}

def main() = ()