examples/neg/synthesized_else.effekt
def foo(): Option[Int] = if (true) Some(42) // ERROR Expected Option[Int] but got Unit

def main() = ()
